--- a/src/pages/Home/components/Hero/Hero.Module.scss
+++ b/src/pages/Home/components/Hero/Hero.Module.scss
@@ -43,7 +43,7 @@
 
 .logo {
   width: 150px;
-  margin-bottom: $spacing-lg;
+  margin-bottom: $spacing-md;
   filter: drop-shadow(0 4px 6px rgba(0, 0, 0, 0.4));
   z-index: 2;
   position: relative;
