--- a/src/pages/Home/components/PropertyList/PropertyList.Module.scss
+++ b/src/pages/Home/components/PropertyList/PropertyList.Module.scss
@@ -41,17 +41,16 @@
 
     .property-title {
       color: $text-primary;
-      margin-bottom: $spacing-sm;
+      font-weight: $font-weight-medium;
     }
 
     .property-price {
       color: $primary-color;
-      margin-bottom: $spacing-sm;
     }
 
     .property-info {
       color: $text-secondary;
-      margin-bottom: $spacing-lg;
+      margin: $spacing-md 0;
 
       span {
         margin-right: $spacing-sm;
