--- a/src/pages/Listing/components/ListingInfo/ListingInfo.scss
+++ b/src/pages/Listing/components/ListingInfo/ListingInfo.scss
@@ -4,7 +4,6 @@
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   gap: $spacing-lg;
-  margin-top: $spacing-lg;
 
   .section {
     padding: $spacing-md;
